deploy/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: arch-security-tracker
spec:
  rules:
    - host: security.archlinux.mx
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: arch-security-tracker
                port:
                  name: http
  tls:
    - hosts:
        - security.archlinux.mx
      secretName: arch-security-tracker-tls
